Update es kibana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,7 +165,7 @@ services:
       - confluent
 
   spark-master:
-    image: bitnami/spark:3.5.0
+    image: bitnami/spark:3.4.0
     command: bin/spark-class org.apache.spark.deploy.master.Master
     ports:
       - "9090:8080"
@@ -180,7 +180,7 @@ services:
 
 
   spark-worker:
-    image: bitnami/spark:3.5.0
+    image: bitnami/spark:3.4.0
     command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     depends_on:
       - spark-master
@@ -239,7 +239,7 @@ services:
       - confluent
 
   jupyter:
-    image: jupyter/pyspark-notebook:spark-3.5.0
+    image: jupyter/pyspark-notebook:spark-3.4.0
     container_name: jupyter
     ports:
       - "8888:8888"
@@ -258,43 +258,37 @@ services:
       - ./notebooks:/home/jovyan/work
       - ./conf/hadoop:/opt/hadoop/etc/hadoop
  
-  # elasticsearch:
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:8.17.4
-  #   container_name: elasticsearch
-  #   environment:
-  #     - discovery.type=single-node
-  #     - ES_JAVA_OPTS=-Xms512m -Xmx512m
-  #     - xpack.security.enabled=false
-  #   ports:
-  #     - "9200:9200"
-  #     - "9300:9300"
-  #   volumes:
-  #     - elasticsearch_data:/usr/share/elasticsearch/data
-  #   networks:
-  #     - confluent
-  #   healthcheck:
-  #     test: ["CMD", "curl", "-f", "http://localhost:9200"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 5
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.14
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+      - xpack.security.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+    ports:
+      - "9200:9200"
+    networks:
+      - confluent
+    healthcheck:
+      test: curl -s http://localhost:9200/_cluster/health | grep -q '"status":"green"'
+      interval: 20s
+      timeout: 10s
+      retries: 10
 
-  # kibana:
-  #   image: docker.elastic.co/kibana/kibana:8.17.4
-  #   container_name: kibana
-  #   depends_on:
-  #     elasticsearch:
-  #       condition: service_healthy
-  #   environment:
-  #     - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-  #   ports:
-  #     - "5601:5601"
-  #   networks:
-  #     - confluent
-  #   healthcheck:
-  #     test: ["CMD", "curl", "-f", "http://localhost:5601/api/status"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 5
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.17.14
+    container_name: kibana
+    environment:
+      ELASTICSEARCH_HOSTS: "http://elasticsearch:9200"
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+    networks:
+      - confluent
+
+
 
   # cassandra_db:
   #   image: cassandra:latest
